--- a/src/AinbLibrary.Runner/AinbLibrary.Runner.csproj
+++ b/src/AinbLibrary.Runner/AinbLibrary.Runner.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AiNodeLibrary\AiNodeLibrary.csproj" />
+    <ProjectReference Include="..\AinbLibrary\AinbLibrary.csproj" />
   </ItemGroup>
 
 </Project>
