--- a/src/AinbLibrary/AinbLibrary.csproj
+++ b/src/AinbLibrary/AinbLibrary.csproj
@@ -4,10 +4,13 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Revrs" Version="1.0.1" />
+    <PackageReference Include="Revrs" Version="1.0.3" />
+    <PackageReference Include="SimdLinq" Version="1.3.2" />
+    <PackageReference Include="VYaml" Version="0.25.0" />
   </ItemGroup>
 
 </Project>
