--- a/src/AinbLibrary.Runner/Properties/launchSettings.json
+++ b/src/AinbLibrary.Runner/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "AinbLibrary.Runner": {
       "commandName": "Project",
-      "commandLineArgs": "\"D:\\bin\\AINB\\AutoPlacement.root.ainb\" \"D:\\bin\\AINB\\Mogurudo.brain.inaccessibletotarget.module.ainb\""
+      "commandLineArgs": "\"D:\\bin\\AINB\\AutoPlacement.root.ainb\" \"D:\\bin\\AINB\\Mogurudo.brain.inaccessibletotarget.module.ainb\" \"D:\\bin\\AINB\\PlayerCamera.root.ainb\""
     }
   }
 }
